name: ordrea-gtk
version: 0.0.0
synopsis: Ordrea interface to GTK+
description: Ordrea interface to GTK+
homepage: https://github.com/maoe/ordrea-gtk
license: BSD3
license-file: LICENSE
author: Mitsutoshi Aoe
maintainer: Mitsutoshi Aoe <maoe@foldr.in>
copyright: Copyright (C) 2014 Mitsutoshi Aoe
category: Graphics
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/ordrea-gtk.git

flag examples
  description: Build examples
  default: False

library
  exposed-modules:
    FRP.Ordrea.Gtk
    FRP.Ordrea.IO
  build-depends:
      base >= 4.6 && < 4.8
    , gtk == 0.12.*
    , mtl >= 2.1 && < 2.3
    , ordrea == 0.3.*
  hs-source-dirs: src
  default-language: Haskell2010

source-repository head
  type: git
  branch: develop
  location: https://github.com/maoe/ordrea-gtk.git
